--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TC Blogs</title>
+    <title>Sugam Blogs</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel=" stylesheet" href="{% static 'css/slick.css' %}">
@@ -82,7 +82,6 @@
 
                         <div class="post featured-post-lg">
                             <div class="details clearfix">
-                                <a href="#" class="category-badge">Finance</a>
                                 <h2 class="post-title">
                                     <a href="#">3 Things to avoid while investing in stock market as a beginner</a>
                                 </h2>
@@ -434,7 +433,6 @@
                         <div class="row post-carousel-twoCol post-carousel">
                             <div class="post post-over-content col-md-6">
                                 <div class="details clearfix">
-                                    <a href="#" class="category-badge">Entertainment</a>
                                     <h4 class="post-title">
                                         <a href="#">Amazon prime video to coproduce "Ram Setu"</a>
                                     </h4>
@@ -456,7 +454,6 @@
 
                             <div class="post post-over-content col-md-6">
                                 <div class="details clearfix">
-                                    <a href="#" class="category-badge">Technology</a>
                                     <h4 class="post-title">
                                         <a href="#">How to prepare your Google account afterlife.</a>
                                     </h4>
@@ -478,7 +475,6 @@
 
                             <div class="post post-over-content col-md-6">
                                 <div class="details clearfix">
-                                    <a href="#" class="category-badge">Education</a>
                                     <h4 class="post-title">
                                         <a href="#">Learn from top B-Schools at 1/10th the fee: upGrad</a>
                                     </h4>
@@ -780,12 +776,9 @@
                         <div class="sidebar">
                             <div class="widget rounded">
                                 <div class="widget-about text-center">
-                                    <img src="{% static 'images/logo.svg' %}" alt="" class="logo">
-                                    <p class="mb-4" style="text-align: justify;">This is Lorem ipsum dolor sit amet
-                                        consectetur adipisicing elit.
-                                        Dolores tempora accusantium culpa deleniti nesciunt repellat quisquam quos vero.
-                                        Esse itaque est optio nostrum porro quisquam nihil reprehenderit fugiat enim
-                                        non.</p>
+                                    <h3 class="widget-title">About me</h3>
+                                    <p class="mb-4" style="text-align: justify;">This was supposed to be my portfolio
+                                    but is now my blog? what am i doing with my life eh?</p>
                                     <ul class="social-icons list-unstyled list-inline mb-0">
                                         <li class="list-inline-item">
                                             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -799,108 +792,6 @@
                                         <li class="list-inline-item">
                                             <a href="#"><i class="fab fa-pinterest"></i></a>
                                         </li>
-                                        <li class="list-inline-item">
-                                            <a href="#"><i class="fab fa-telegram-plane"></i></a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a href="#"><i class="far fa-envelope"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <div class="widget rounded">
-                                <div class="widget-header text-center">
-                                    <h3 class="widget-title">Popular Posts</h3>
-                                </div>
-                                <div class="widget-content">
-                                    <div class="post post-list-sm circle">
-                                        <div class="thumb circle">
-                                            <span class="number">1</span>
-                                            <a href="#">
-                                                <div class="inner">
-                                                    <img src="{% static 'images/posts/tabs-1.jpg' %}" alt="">
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="details clearfix">
-                                            <h6 class="post-title my-0">
-                                                <a href="#">Bitcoin price raise after sudden fall</a>
-                                            </h6>
-                                            <ul class="meta list-inline mt-1 mb-0">
-                                                <li class="list-inline-item">30 May 2021</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="post post-list-sm circle">
-                                        <div class="thumb circle">
-                                            <span class="number">2</span>
-                                            <a href="#">
-                                                <div class="inner">
-                                                    <img src="{% static 'images/posts/tabs-2.jpg' %}" alt="">
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="details clearfix">
-                                            <h6 class="post-title my-0">
-                                                <a href="#">Clubhouse Crosses 1Mn Downloads On Play Store</a>
-                                            </h6>
-                                            <ul class="meta list-inline mt-1 mb-0">
-                                                <li class="list-inline-item">30 May 2021</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="post post-list-sm circle">
-                                        <div class="thumb circle">
-                                            <span class="number">3</span>
-                                            <a href="#">
-                                                <div class="inner">
-                                                    <img src="{% static 'images/posts/tabs-3.jpg' %}" alt="">
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="details clearfix">
-                                            <h6 class="post-title my-0">
-                                                <a href="#">Check current Gold Price of 24k</a>
-                                            </h6>
-                                            <ul class="meta list-inline mt-1 mb-0">
-                                                <li class="list-inline-item">30 May 2021</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="post post-list-sm circle">
-                                        <div class="thumb circle">
-                                            <span class="number">4</span>
-                                            <a href="#">
-                                                <div class="inner">
-                                                    <img src="{% static 'images/posts/tabs-4.png' %}" alt="">
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="details clearfix">
-                                            <h6 class="post-title my-0">
-                                                <a href="#">Improve your mails with Grammarly</a>
-                                            </h6>
-                                            <ul class="meta list-inline mt-1 mb-0">
-                                                <li class="list-inline-item">30 May 2021</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="widget rounded">
-                                <div class="widget-header text-center">
-                                    <h3 class="widget-title">Explore Topics</h3>
-                                </div>
-                                <div class="widget-content">
-                                    <ul class="list">
-                                        <li><a href="#">Trending</a><span>(7)</span></li>
-                                        <li><a href="#">Politics</a><span>(5)</span></li>
-                                        <li><a href="#">Fashion</a><span>(1)</span></li>
-                                        <li><a href="#">Lifestyle</a><span>(9)</span></li>
-                                        <li><a href="#">Inspiration</a><span>(2)</span></li>
-                                        <li><a href="#">Culture</a><span>(4)</span></li>
                                     </ul>
                                 </div>
                             </div>
