--- a/templates/myblog/blogdetails.html
+++ b/templates/myblog/blogdetails.html
@@ -9,16 +9,16 @@
         <p class="mb-4" style="text-align: justify;">{{blog.blog_body}}</p>
         <ul class="social-icons list-unstyled list-inline mb-0">
             <li class="list-inline-item">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/sugamnpp"><i class="fab fa-facebook-f"></i></a>
             </li>
             <li class="list-inline-item">
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/sugamnp/"><i class="fab fa-instagram"></i></a>
             </li>
             <li class="list-inline-item">
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/sugam-neupane-6424451b2"><i class="fab fa-linkedin-in"></i></a>
             </li>
             <li class="list-inline-item">
-                <a href="#"><i class="fab fa-pinterest"></i></a>
+                <a href="https://www.pinterest.com/sugamnp"><i class="fab fa-pinterest"></i></a>
             </li>
         </ul>
     </div>
