--- a/templates/base.html
+++ b/templates/base.html
@@ -405,22 +405,16 @@
                                                     <button class="toggle-button icon-share"></button>
                                                     <ul class="icons list-unstyled list-inline mb-0">
                                                         <li class="list-inline-item">
-                                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                                            <a href="https://www.facebook.com/sugamnpp"><i class="fab fa-facebook-f"></i></a>
                                                         </li>
                                                         <li class="list-inline-item">
-                                                            <a href="#"><i class="fab fa-twitter"></i></a>
+                                                            <a href="https://www.instagram.com/sugamnp/"><i class="fab fa-instagram"></i></a>
                                                         </li>
                                                         <li class="list-inline-item">
-                                                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                                            <a href="https://www.linkedin.com/in/sugam-neupane-6424451b2"><i class="fab fa-linkedin"></a>
                                                         </li>
                                                         <li class="list-inline-item">
-                                                            <a href="#"><i class="fab fa-pinterest"></i></a>
-                                                        </li>
-                                                        <li class="list-inline-item">
-                                                            <a href="#"><i class="fab fa-telegram-plane"></i></a>
-                                                        </li>
-                                                        <li class="list-inline-item">
-                                                            <a href="#"><i class="far fa-envelope"></i></a>
+                                                            <a href="https://www.pinterest.com/sugamnp"><i class="fab fa-pinterest"></i></a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -455,16 +449,16 @@
                                     but is now my blog? what am i doing with my life eh?</p>
                                     <ul class="social-icons list-unstyled list-inline mb-0">
                                         <li class="list-inline-item">
-                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                            <a href="https://www.facebook.com/sugamnpp"><i class="fab fa-facebook-f"></i></a>
                                         </li>
                                         <li class="list-inline-item">
-                                            <a href="#"><i class="fab fa-twitter"></i></a>
+                                            <a href="https://www.instagram.com/sugamnp/"><i class="fab fa-instagram"></i></a>
                                         </li>
                                         <li class="list-inline-item">
-                                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                            <a href="https://www.linkedin.com/in/sugam-neupane-6424451b2"><i class="fab fa-linkedin"></a>
                                         </li>
                                         <li class="list-inline-item">
-                                            <a href="#"><i class="fab fa-pinterest"></i></a>
+                                            <a href="https://www.pinterest.com/sugamnp"><i class="fab fa-pinterest"></i></a>
                                         </li>
                                     </ul>
                                 </div>
