--- a/templates/base.html
+++ b/templates/base.html
@@ -411,7 +411,7 @@
                                                             <a href="https://www.instagram.com/sugamnp/"><i class="fab fa-instagram"></i></a>
                                                         </li>
                                                         <li class="list-inline-item">
-                                                            <a href="https://www.linkedin.com/in/sugam-neupane-6424451b2"><i class="fab fa-linkedin"></a>
+                                                            <a href="https://www.linkedin.com/in/sugam-neupane-6424451b2"><i class="fab fa-linkedin-in"></i></a>
                                                         </li>
                                                         <li class="list-inline-item">
                                                             <a href="https://www.pinterest.com/sugamnp"><i class="fab fa-pinterest"></i></a>
@@ -455,7 +455,7 @@
                                             <a href="https://www.instagram.com/sugamnp/"><i class="fab fa-instagram"></i></a>
                                         </li>
                                         <li class="list-inline-item">
-                                            <a href="https://www.linkedin.com/in/sugam-neupane-6424451b2"><i class="fab fa-linkedin"></a>
+                                            <a href="https://www.linkedin.com/in/sugam-neupane-6424451b2"><i class="fab fa-linkedin-in"></i></a>
                                         </li>
                                         <li class="list-inline-item">
                                             <a href="https://www.pinterest.com/sugamnp"><i class="fab fa-pinterest"></i></a>
